--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -61,6 +61,22 @@ services:
     networks:
     - app-network
     restart: unless-stopped
+    
+  problemservice:
+    container_name: CodeGrader-problemservice
+    build: 
+      context: ./services/CodeGrader-ProblemService/ProblemManagementService
+      dockerfile: ../../../dockerfiles/CodeGrader-ProblemService.dockerfile
+    ports:
+    - "${CODEGRADER_PROBLEMSERVICE}:8080"
+    environment:
+    - ConnectionStrings__PMConnection=Server=sqlserver,1433;Database=${DB_PROBLEMSERVICE_NAME};User Id=sa;Password=${SA_PASSWORD};TrustServerCertificate=true;
+    - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+      - sqlserver
+    networks:
+    - app-network
+    restart: unless-stopped
 
   apigateway:
     container_name: CodeGrader-ApiGateway
