--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,7 +12,7 @@ services:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${SA_PASSWORD} -Q 'SELECT 1'"]
+      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P '${SA_PASSWORD}' -Q 'SELECT 1' -C || exit 1"]
       interval: 1m30s
       timeout: 30s
       retries: 5
@@ -41,7 +41,9 @@ services:
     - Cloudinary__ApiKey=${Cloudinary__ApiKey}
     - Cloudinary__ApiSecret=${Cloudinary__ApiSecret}
     depends_on:
-      - sqlserver
+      sqlserver:
+        condition: service_healthy
+
     networks:
     - app-network
     restart: unless-stopped
@@ -55,7 +57,8 @@ services:
     - ConnectionStrings__PMConnection=Server=sqlserver,1433;Database=${DB_PROBLEMSERVICE_NAME};User Id=sa;Password=${SA_PASSWORD};TrustServerCertificate=true;
     - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
-      - sqlserver
+      sqlserver:
+        condition: service_healthy
     networks:
     - app-network
     restart: unless-stopped
