doi ten docker-compsoe cap nhat run.sh them bookmark them env cho bookmark

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+APIGATEWAY_URL=http://apigateway:8080
+
 # sqlserver
 SA_PASSWORD=YourStrong@Passw0rd
 
@@ -5,6 +7,7 @@ SA_PASSWORD=YourStrong@Passw0rd
 DB_HUYTEST_NAME=codegraderhuytest
 DB_USERSERVICE_NAME=codegraderuser
 DB_PROBLEMSERVICE_NAME=codegraderproblem
+DB_PROBLEMBOOKMARKSERVICE_NAME=codegraderbookmark
 
 # Environment
 ENVIRONMENT=Development
@@ -14,6 +17,7 @@ CODEGRADER_APIGATEWAY=5000
 CODEGRADER_HUYTEST=5001
 CODEGRADER_USERSERVICE=5002
 CODEGRADER_PROBLEMSERVICE=5003
+CODEGRADER_PROBLEMBOOKMARKERVICE=5004
 
 # user service config
 JWT__Key=OmqJjDX38/zoM9Ecra+BFM4updtsQvi9OFjTwsG+rDs=
