--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ CODEGRADER_HUYTEST=5001
 CODEGRADER_USERSERVICE=5002
 CODEGRADER_PROBLEMSERVICE=5003
 CODEGRADER_PROBLEMBOOKMARKERVICE=5004
+CODEGRADER_AICODEGRADER=5005
 
 # user service config
 JWT__Key=OmqJjDX38/zoM9Ecra+BFM4updtsQvi9OFjTwsG+rDs=
@@ -33,6 +34,9 @@ EmailSettings__Password=yxpt vioc tytn cgzn
 Cloudinary__CloudName=dew9go5as
 Cloudinary__ApiKey=924189865972376
 Cloudinary__ApiSecret=-6LX_Lpp6hEi7eI0L7R6NtAzO18
+
+# ai codegrader
+Gemini__ApiKey=AIzaSyAS-OxtbqQEsVTPIXzTvwM5X-hmXdf6vas
 
 
 
