add comment service

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ DB_HUYTEST_NAME=codegraderhuytest
 DB_USERSERVICE_NAME=codegraderuser
 DB_PROBLEMSERVICE_NAME=codegraderproblem
 DB_PROBLEMBOOKMARKSERVICE_NAME=codegraderbookmark
+DB_CommentService_Name= CodeGraderComment
 
 # Environment
 ENVIRONMENT=Development
@@ -19,6 +20,7 @@ CODEGRADER_USERSERVICE=5002
 CODEGRADER_PROBLEMSERVICE=5003
 CODEGRADER_PROBLEMBOOKMARKERVICE=5004
 CODEGRADER_AICODEGRADER=5005
+CODEGRADER_CommentService=5006
 
 # user service config
 JWT__Key=OmqJjDX38/zoM9Ecra+BFM4updtsQvi9OFjTwsG+rDs=
