--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,22 @@ services:
     - app-network
     restart: unless-stopped
 
+  commentservice:
+    container_name: CodeGrader-CommentService
+    image: trdhuy21/codegrader-infrastructure-commentservice:latest
+    ports:
+    - "${CODEGRADER_CommentService}:8080"
+    environment:
+    - ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=${DB_CommentService_Name};User Id=sa;Password=${SA_PASSWORD};TrustServerCertificate=true;
+    - ASPNETCORE_ENVIRONMENT=Development
+    - ExternalService__BaseUrl=${APIGATEWAY_URL}
+    - JWT__Key=${JWT__Key}
+    - JWT__Issuer=${JWT__Issuer}
+    - JWT__Audience=${JWT__Audience}
+    networks:
+    - app-network
+    restart: unless-stopped
+
   apigateway:
     container_name: CodeGrader-ApiGateway
     image: trdhuy21/codegrader-infrastructure-apigateway:latest
