add progress service

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ DB_USERSERVICE_NAME=codegraderuser
 DB_PROBLEMSERVICE_NAME=codegraderproblem
 DB_PROBLEMBOOKMARKSERVICE_NAME=codegraderbookmark
 DB_CommentService_Name= CodeGraderComment
+DB_ProgressService_Name=CodeGraderProgress
 
 # Environment
 ENVIRONMENT=Development
@@ -21,6 +22,7 @@ CODEGRADER_PROBLEMSERVICE=5003
 CODEGRADER_PROBLEMBOOKMARKERVICE=5004
 CODEGRADER_AICODEGRADER=5005
 CODEGRADER_CommentService=5006
+CODEGRADER_ProgressService=5007
 
 # user service config
 JWT__Key=OmqJjDX38/zoM9Ecra+BFM4updtsQvi9OFjTwsG+rDs=
