--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,25 @@ services:
     networks:
     - app-network
     restart: unless-stopped
+  
+  progressservice:
+    container_name: CodeGrader-ProgressService
+    image: trdhuy21/codegrader-infrastructure-progressservice:latest
+    ports:
+    - "${CODEGRADER_ProgressService}:8080"
+    environment:
+    - ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=${DB_ProgressService_Name};User Id=sa;Password=${SA_PASSWORD};TrustServerCertificate=true;
+    - ASPNETCORE_ENVIRONMENT=Development
+    - ExternalService__BaseUrl=${APIGATEWAY_URL}
+    - JWT__Key=${JWT__Key}
+    - JWT__Issuer=${JWT__Issuer}
+    - JWT__Audience=${JWT__Audience}
+    depends_on:
+      sqlserver:
+        condition: service_healthy
+    networks:
+    - app-network
+    restart: unless-stopped
 
   apigateway:
     container_name: CodeGrader-ApiGateway
