delete key and update readme

--- a/.env
+++ b/.env
@@ -31,16 +31,16 @@ JWT__Audience=MyAudience
 
 EmailSettings__SmtpServer=smtp.gmail.com
 EmailSettings__SmtpPort=587
-EmailSettings__SenderEmail=ngocnguyen10072003@gmail.com
+EmailSettings__SenderEmail=
 EmailSettings__SenderName=CodePractice
-EmailSettings__Password=yxpt vioc tytn cgzn
+EmailSettings__Password=
 
-Cloudinary__CloudName=dew9go5as
-Cloudinary__ApiKey=924189865972376
-Cloudinary__ApiSecret=-6LX_Lpp6hEi7eI0L7R6NtAzO18
+Cloudinary__CloudName=
+Cloudinary__ApiKey=
+Cloudinary__ApiSecret=
 
 # ai codegrader
-Gemini__ApiKey=AIzaSyAS-OxtbqQEsVTPIXzTvwM5X-hmXdf6vas
+Gemini__ApiKey=
 
 
 
